--- a/css/style.css
+++ b/css/style.css
@@ -254,8 +254,8 @@ textarea {
   left: 50%;
   transform: translateX(-50%);
   width: 80%;
-  height: 6px;
-  background: rgba(255,255,255,0.6);
+  height: 26px;
+  background: rgba(255,255,255,0.3);
   border-radius: 3px;
   cursor: ew-resize;
   -webkit-appearance: none;
@@ -264,8 +264,8 @@ textarea {
 
 .comparison-slider .slider::-webkit-slider-thumb,
 .comparison-slider .slider::-moz-range-thumb {
-  width: 16px;
-  height: 16px;
+  width: 25px;
+  height: 25px;
   background: #333;
   border-radius: 50%;
   cursor: pointer;
@@ -406,4 +406,19 @@ textarea {
     border-radius: 8px;
     object-fit: cover;
   }
+}
+
+/* FOOTER */
+
+.footer-dm0407 {
+  border-top: 1px solid #00bfff;
+  width: 100%;
+  margin-top: 50px;
+  text-align: center; /* centra el texto */
+  padding: 5px 0;   /* espacio arriba y abajo del texto */
+}
+
+.footer-dm0407 p {
+  font-size: 10px;    /* tamaño del texto */
+  color: #f5f5f5;     /* color del texto */
 }
